add architecture decision

--- a/model.ipynb
+++ b/model.ipynb
@@ -44,9 +44,9 @@
    "source": [
     "How to proceed: (WIP)\n",
     "\n",
-    "- [ ] load training and test data from the CIFAR10 dataset and split into 80% training and 20% validation data\n",
-    "- [ ] add data loader\n",
-    "- [ ] show first 10 train images with matplotlib to get an idea about the images\n",
+    "- [x] load training and test data from the CIFAR10 dataset and split into 80% training and 20% validation data\n",
+    "- [x] add data loader\n",
+    "- [x] show first 10 train images with matplotlib to get an idea about the images\n",
     "- [ ] decide on an architecture\n",
     "- [ ] train the model\n",
     "- [ ] test the model\n",
@@ -274,12 +274,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de3d8860-5933-4d96-b957-6cca2a19dce4",
+   "cell_type": "markdown",
+   "id": "468c2ecc-4646-49b6-a75b-f1d638284a42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Step 4: Model architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94e8f73a-8d9a-451a-acfd-9fd0b10b9bce",
+   "metadata": {},
+   "source": [
+    "Decision for the architecture is a CNN model (Convolutional Neural Network) due to:\n",
+    "\n",
+    "* Image Classification: CIFAR-10 consists of 60,000 colored images divided into 10 classes, making it a classic application for CNNs.\n",
+    "* Feature Extraction: CNNs are specifically designed to extract features from images.\n",
+    "* Image Dimensionality: CIFAR-10 images have low resolution (32x32 pixels), allowing CNNs to work effectively with relatively little computational power.\n",
+    "* Known Architectures: LeNet, AlexNet, VGG, ResNet, etc., are well-known CNN architectures designed for image classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a566b8-56bf-48c1-90b1-75c614dbccbc",
+   "metadata": {},
+   "source": [
+    "## Deeper dive into the architecture\n",
+    "\n",
+    "The CNN for this model will have CNN layers for the backbone and linear layers for the head.\n",
+    "\n",
+    "The dataset with 60.000 images is relatively small, two CNN layers for the start should be sufficient.\n",
+    "\n",
+    "During training, it will be tested if a model with three CNN layers and three linear layers perform better. But for the start, this is the CNN architecture:\n",
+    "\n",
+    "### First CNN Layer:\n",
+    "* 3 input channels, each one represents one color: red, green, blue\n",
+    "* 16 output channel as kernels which generates the feature maps\n",
+    "* 3x3 kernel size\n",
+    "* stride is 1 pixel\n",
+    "* padding is 1 pixel\n",
+    "* ReLU as activation function for non-linear transformation of the images (ReLU: rectified linear unit function)\n",
+    "* batch-normalization to stabilize and accelerate the training of deep neural networks by normalizing the inputs of this layer\n",
+    "* max pooling of 2x2 pixels to downsample the feature maps, preserving the most relevant features while reducing computational complexity and spatial dimensions\n",
+    "\n",
+    "### Second CNN Layer:\n",
+    "* 16 input channels due to 16 feature maps from the first layer\n",
+    "* 32 output channels as kernels\n",
+    "* 3x3 kernel size\n",
+    "* stride 1\n",
+    "* padding 1\n",
+    "* ReLU\n",
+    "* batch-normalization\n",
+    "* 2x2 max pooling\n",
+    "\n",
+    "### Flatten \n",
+    "* flatten the 32 feature maps to a one dimensional vector for further processing\n",
+    "* parameters are 32x8x8x3 - 32 kernels, 8x8 pixels, 3 color channels\n",
+    "  \n",
+    "explanation for 8x8 pixels: started with 32x32 pixels - first max pooling halved it to 16x16 pixels - second max pooling halved it to 8x8 pixels\n",
+    "\n",
+    "### First Linear Layer:\n",
+    "* input would be 32x8x8x3 parameters\n",
+    "* output 256 to reduce dimensionality: needed to improve computational efficiency and mitigate overfitting by reducing unnecessary complexity\n",
+    "* ReLU\n",
+    "* dropout of 20% to reduce the possibility of overfitting\n",
+    "\n",
+    "### Second Linear Layer:\n",
+    "* input of 256\n",
+    "* output is based on the classes which are 10\n",
+    "* Sigmoid as activation function as Sigmoid function generates a probability distribution which is useful when interpreting the classes as probabilities\n"
+   ]
   }
  ],
  "metadata": {
