mob next [ci-skip] [ci skip] [skip ci]
lastFile:model.ipynb

--- a/model.ipynb
+++ b/model.ipynb
@@ -39,22 +39,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feac685c-ff92-4a84-9911-c6bf28b2e164",
-   "metadata": {},
-   "source": [
-    "How to proceed: (WIP)\n",
-    "\n",
-    "- [x] load training and test data from the CIFAR10 dataset and split into 80% training and 20% validation data\n",
-    "- [x] add data loader\n",
-    "- [x] show first 10 train images with matplotlib to get an idea about the images\n",
-    "- [ ] decide on an architecture\n",
-    "- [ ] train the model\n",
-    "- [ ] test the model\n",
-    "- [ ] save"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bcdc6827-d316-42ac-96e5-5e93f689878f",
    "metadata": {},
    "source": [
@@ -149,9 +133,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size_train = 10\n",
-    "batch_size_val = 5\n",
-    "batch_size_test = 5\n",
+    "batch_size_train = 64\n",
+    "batch_size_val = 16\n",
+    "batch_size_test = 16\n",
     "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size_train, shuffle=True)\n",
     "valid_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size_val, shuffle=False)\n",
@@ -334,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "3a4592d6-dceb-4ac4-86e0-5cdbbcc86d08",
    "metadata": {},
    "outputs": [
@@ -353,7 +337,7 @@
       "    (6): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "    (7): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "    (8): Flatten(start_dim=1, end_dim=-1)\n",
-      "    (9): Linear(in_features=32, out_features=256, bias=True)\n",
+      "    (9): Linear(in_features=2048, out_features=256, bias=True)\n",
       "    (10): ReLU()\n",
       "    (11): Dropout(p=0.2, inplace=False)\n",
       "    (12): Linear(in_features=256, out_features=10, bias=True)\n",
@@ -363,6 +347,7 @@
     }
    ],
    "source": [
+    "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
@@ -382,7 +367,7 @@
     "\n",
     "            nn.Flatten(),\n",
     "\n",
-    "            nn.Linear(32, 256),\n",
+    "            nn.Linear(32*8*8, 256),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.2),\n",
     "\n",
@@ -409,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "c30661c5-1b98-4839-9fbf-5b6dd584671d",
    "metadata": {},
    "outputs": [],
@@ -417,6 +402,269 @@
     "scripted = torch.jit.script(model)\n",
     "torch.jit.save(scripted, \"cifar10_network.pt\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff74d0f2-0737-435d-8bcc-3c2cafe3fe31",
+   "metadata": {},
+   "source": [
+    "### Loss function\n",
+    "\n",
+    "Reasons for Cross-Entropy Loss:\n",
+    "* Multi-Class Classification: CIFAR-10 is a dataset for classifying images into 10 different classes. Cross-Entropy Loss is a common loss function for multi-class classification because it handles the probability distribution of classes effectively.\n",
+    "* Softmax Activation Function: is often used in the final layer of neural networks for classification tasks to transform the output into probabilities. Cross-Entropy Loss works well with the softmax activation because it minimizes the difference between the predicted probabilities and the actual class targets.\n",
+    "* Effective Gradient Computation: The Cross-Entropy Loss function enables effective computation of gradients during training through backpropagation. This is crucial for efficiently training deep neural networks on datasets like CIFAR-10, which may have a large number of parameters.\n",
+    "* Numerical Stability: Cross-Entropy Loss provides a numerically stable method for computing the loss, especially when dealing with small probabilities or extreme values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d62291c8-edc6-4075-b631-65c8f6c740ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c9fa697-83ab-4714-b5db-b71f5a482a55",
+   "metadata": {},
+   "source": [
+    "### Optimizer\n",
+    "\n",
+    "Reasons for Adam as optimizer:\n",
+    "\n",
+    "* Adaptive Learning Rates: Adam adjusts the learning rates for each parameter individually based on the magnitude of gradients and past gradients. This adaptiveness can be beneficial for training on CIFAR-10, which has diverse classes and complex patterns, as it helps in navigating the optimization landscape efficiently.\n",
+    "* Efficient Momentum Updates: Adam incorporates momentum, which helps accelerate convergence and escape local minima. This is particularly useful in CIFAR-10, where the optimization process may encounter many local optima due to the complexity of the dataset.\n",
+    "* Automatic Learning Rate Adjustment: Adam automatically adjusts the learning rate during training, which can be advantageous for CIFAR-10 since it alleviates the need for manual tuning of learning rates, saving time and effort in the hyperparameter tuning process.\n",
+    "* Robustness to Noisy Gradients: Adam's adaptive learning rate mechanism makes it robust to noisy gradients, which can be beneficial when dealing with the inherent noise present in the CIFAR-10 dataset.\n",
+    "* Widespread Adoption and Empirical Success: Adam has been widely adopted in the deep learning community and has shown empirical success in various tasks, including image classification on datasets similar to CIFAR-10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "97e75196-6a6a-4ace-9c49-2c5129641d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c65dd8-ed23-479a-a994-c22f4d8fc271",
+   "metadata": {},
+   "source": [
+    "# Step 5 Training-Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "25c03f71-566c-4477-89b5-cb07e6f305b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10: 100%|██████████| 625/625 [00:50<00:00, 12.41it/s, loss=0.0194] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 - Average Loss: 0.06373478171713651\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10: 100%|██████████| 625/625 [00:44<00:00, 14.18it/s, loss=0.138]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 - Average Loss: 0.06477960001276806\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10: 100%|██████████| 625/625 [00:53<00:00, 11.58it/s, loss=0.0896] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 - Average Loss: 0.06417350249886512\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10: 100%|██████████| 625/625 [00:51<00:00, 12.19it/s, loss=0.0144] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 - Average Loss: 0.05819064802005887\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10: 100%|██████████| 625/625 [00:48<00:00, 12.76it/s, loss=0.0294]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 - Average Loss: 0.05382451677806675\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10: 100%|██████████| 625/625 [00:50<00:00, 12.40it/s, loss=0.0597]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6 - Average Loss: 0.05901400065366179\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10: 100%|██████████| 625/625 [00:43<00:00, 14.22it/s, loss=0.0381]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7 - Average Loss: 0.059193462400324644\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10: 100%|██████████| 625/625 [00:46<00:00, 13.47it/s, loss=0.0471]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8 - Average Loss: 0.06012735849702731\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10: 100%|██████████| 625/625 [00:41<00:00, 14.89it/s, loss=0.00415] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9 - Average Loss: 0.05793811602224596\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10: 100%|██████████| 625/625 [00:42<00:00, 14.86it/s, loss=0.0523]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10 - Average Loss: 0.050076489365193995\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "# define number of epochs for the training loop\n",
+    "num_epochs = 10\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    # set the loss to 0 for every epoch\n",
+    "    running_loss = 0.0\n",
+    "\n",
+    "    # use the train mode of the model to also consider batchNormalization and dropout which was defined in the model architecture\n",
+    "    model.train()\n",
+    "\n",
+    "    train_data_progress = tqdm(train_dataloader, desc=f'Epoch {epoch + 1}/{num_epochs}')\n",
+    "\n",
+    "    # iterate over the batches in den train_dataloader\n",
+    "    for inputs, labels in train_data_progress:\n",
+    "        # set gradients of optimizer to zero\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # call the forward method of the model\n",
+    "        outputs = model(inputs)\n",
+    "\n",
+    "        # calculate the loss value of this batch by using the defined loss function with the outputs and labels\n",
+    "        loss_value = loss(outputs, labels)\n",
+    "\n",
+    "        # perform backpropagation to compute the gradients of the loss function \n",
+    "        # it allows the model to learn how to adjust its parameters to minimize the loss during training\n",
+    "        loss_value.backward()\n",
+    "\n",
+    "        # adjust the model parameter based on the computed gradients and the optimization algorithm's rules.\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # update the running loss for the epoch\n",
+    "        running_loss += loss_value.item()\n",
+    "\n",
+    "        # update the progress bar description with the current loss value\n",
+    "        train_data_progress.set_postfix(loss=loss_value.item())\n",
+    "\n",
+    "    # print the average loss for the epoch\n",
+    "    print(f'Epoch {epoch + 1} - Average Loss: {running_loss / len(train_dataloader)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d09b2cc5-868d-41f4-9868-f5bc53b2d628",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
